<resources>
    <string name="app_name">AutonomiStock</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_an_account">Create an account</string>
    <string name="title_activity_register">Sign in</string>
    <string name="problem_with_signing_in">Problem with signing in?</string>
    <string name="sign_up">Sign Up</string>
    <string name="Sign_UP">Sign Up</string>
    <string name="Autonomi">Autonomi</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_rollNo">Roll No</string>
    <string name="verifyEmailText">Enter the verification code sent to your registered email</string>
    <string name="password_spec">Password must be 8 characters long. It must contain an uppercase character, a lowercase character, a number and a special character.</string>
    <string name="login_status">Login Status</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="catalogue">Catalogue</string>
    <string name="cart_statet">Cart</string>
    <string name="logout">Logout</string>
    <string name="no_items_in_your_cart">No Items in your cart</string>
    <string name="issues">Issues</string>
    <string name="issue_requests">You have no issue requests</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
</resources>
