<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.autonomistock.StartActivity"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:gravity="center"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        android:background="@drawable/start_activity_design"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        />
    <Button
        android:id="@+id/sign_in"
        android:text="@string/action_sign_in_short"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_above="@id/create_an_account"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/start_activity_button"
        />
    <Button
        android:id="@+id/create_an_account"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/start_activity_button"
        />
</RelativeLayout>


