<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.autonomistock.StudentMainActivity">

    <FrameLayout
        android:id="@+id/catalogue_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/cart_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_items_in_your_cart"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:visibility="gone"
            android:id="@+id/no_items"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/cart_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/categoryitems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="visible"
                android:scrollbars="vertical">
            </android.support.v7.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryitems"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/total"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:background="@drawable/total_issue_item"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/issue_request"
                    android:textColor="#000000"
                    android:background="@drawable/issue_border_drawable"
                    android:text="Issue Request"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/issues_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_requests"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:visibility="gone"
            android:id="@+id/no_issues"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="gone"
            android:scrollbars="vertical">
        </android.support.v7.widget.RecyclerView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/logout"
            android:text="@string/logout"/>

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="#FAFAFA"
        app:itemTextColor="#FAFAFA"
        app:menu="@menu/navigation"/>

</android.support.constraint.ConstraintLayout>
